outputs/workspace_output_1773872741_8325.txt
  File "<string>", line 6
    old = 'onclick=\"openSupplierModal(\\'\${supplier.id}\\')\"'
                                           ^
SyntaxError: unexpected character after line continuation character
